--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,7 +187,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-/* Proper spacing, family font added, and the text is centered. */
+/* Proper spacing, family font added, and the text is centered */
  footer {
     padding: 30px;
     clear: both;
